--- a/vendor-bin/rector/composer.json
+++ b/vendor-bin/rector/composer.json
@@ -1,5 +1,6 @@
 {
     "require-dev": {
-        "rector/rector": "^2.2.8"
+        "rector/rector": "2.2.8",
+        "nextcloud/rector": "^0.4.1"
     }
 }
